* v1.8.1dev
  * added Travis dummy
  * started working on extensible test infrastructure for CK
  * initiated first Travis build (test)

* V1.7.4
  * extended run_and_get_stdout kernel function 
  * fixed problem in run_and_get_stdout (ValueError: I/O operation on closed file)
  * fixed problem with --help or --get_api from kernel

* V1.7.3
  * fixed rare bug when 'return' is non-integer in remote CK access (such as during crowd-tuning and crowd-testing)
  * fixed copying to clipboard on Windows
  * fixed __init__.py when using CK from scripts/ipython/jupyter (calling init())
  * added ck.jerr(r) - print error with raise KeyboardInterrupt for Jupyter Notebooks
  * fixed major problem with using CK without CK_ROOT env, i.e. from python scripts or Jupyter Notebooks
  * fixed minor problem with CK_ROOT env (when is not set but can be detected automatically)
  * added run_and_get_stdout function and fixed various problems with crowdtuning on MacOS 

* V1.7.2
  * added the --wfe_host and --wfe_host flags to "ck start web".
  * improved API when starting CK server and a browser at the same time ...
  * added info about Docker support in CK
  * simplified adding remote repo using --hostname --port --hostext
  * added possibility to describe repository for Artifact Evaluation
    using flag --describe (see http://cTuning.org/ae), i.e.
    ck add repo:my-artifact-pack --describe
  * return 16 when adding new entry (including repository) and it already exists
  * added often used 'load_yaml_file' and 'save_yaml_to_file' functions to kernel
  * changed yaml.dump to yaml.safe_dump
  * added --install option to "ck pull all (--kernel)" to install CK kernel as python module

* V1.7.1
  * fixing detection of CK installation even when ck is soft linked
  * changing remote-ck repo URL pointing to cknowledge.org 
    (after moving personal CK server to Azure cloud)
  * adding support for basic http authentication for remote repositories