@@ -2,6 +2,7 @@
   * added Travis dummy
   * started working on extensible test infrastructure for CK
   * initiated first Travis build (test)
+  * added possibility to skip listing of all modules from private repositories
 
 * V1.7.4
   * extended run_and_get_stdout kernel function 
